--- a/style/style.css
+++ b/style/style.css
@@ -99,12 +99,14 @@ ul a[href] {
     grid-area: tekst;
 }
 
-.teksten {
+.lijsten {
     display: flex;
+    flex-direction: column;
 }
 
-.eten {
+.afbeeldingen-tekst {
     display: flex;
+    flex-direction: column;
     border: solid 1px #b9005f;
     width: 30rem;
     height: 3rem;
