--- a/style/style.css
+++ b/style/style.css
@@ -3,38 +3,6 @@
 }
 
 
-
-
-@media only screen and (min-width: 320px) and (max-width: 719px) {
-    /* stijlregels voor browserschermen < 720px */
-
-    .alle-tekst {
-        display: flex;
-        flex-direction: column;
-        border: solid 1px var(--c-primair);
-        width: 50%;
-        cursor: pointer;
-    }
-
-    main {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-
-}
-
-
-@media only screen and (min-width: 720px) and (max-width: 1023px) {
-    /* stijlregels voor browserschermen > 720px en < 1024px */
-
-}
-
-@media only screen and (min-width:1024px) {
-    /* stijlregels voor browserschermen ≥ 1024px */
-}
-
 * {
     scroll-behavior: smooth;
 }
@@ -211,4 +179,49 @@ details[open] summary {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 719px) {
+    /* stijlregels voor browserschermen < 720px */
+
+    .vervoerders {
+        width: 100%;
+        height: auto;
+    }
+
+    main {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-left: 1rem;
+    }
+
+    section {
+        width: 100%;
+    }
+
+    .alle-tekst {
+        width: 80%;
+    }
+
+    .intro-tekst {
+        width: 80%;
+    }
+
+
+
+
+
+
+
+
+}
+
+@media only screen and (min-width: 720px) and (max-width: 1023px) {
+    /* stijlregels voor browserschermen > 720px en < 1024px */
+
+}
+
+@media only screen and (min-width:1024px) {
+    /* stijlregels voor browserschermen ≥ 1024px */
 }
