--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,9 @@ body {
         url('firasans-regular.ttf') format('ttf');
 }
 
+h1 {
+    align-items: center;
+}
 
 .vervoerders {
     width: 100%;
@@ -55,15 +58,6 @@ body {
 
 .header_subtitle {
     font-size: 30px;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-areas: "nav tekst";
-    margin-left: 5rem;
-    margin-right: 72rem;
-    gap: 15rem;
 }
 
 .sec-header {
@@ -148,16 +142,6 @@ details[open] summary {
     cursor: text;
 }
 
-#share-button {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    font-size: 2rem;
-    width: fit-content;
-    position: fixed;
-    right: 10%;
-    bottom: 10%;
-}
 
 #share-icon {
     display: flex;
@@ -181,7 +165,10 @@ details[open] summary {
     align-items: center;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 719px) {
+
+
+
+@media only screen and (min-width: 320px) and (max-width: 929px) {
     /* stijlregels voor browserschermen < 720px */
 
     .vervoerders {
@@ -189,15 +176,26 @@ details[open] summary {
         height: auto;
     }
 
+    .header_title {
+        font-size: 40px;
+        margin: 1rem;
+    }
+
     main {
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-left: 1rem;
     }
 
     section {
         width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tekst {
+        display: flex;
+        flex-direction: column;
     }
 
     .alle-tekst {
@@ -208,20 +206,100 @@ details[open] summary {
         width: 80%;
     }
 
+    .lijsten {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #back-up {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--c-primair);
+        width: 3rem;
+        height: 3rem;
+        padding: 1rem;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+    .footer-tel {
+        background-color: #46BECD;
+        margin-top: 3rem;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #back-to-top {
+        margin: 2rem;
+        display: flex;
+        align-items: center;
+        font-size: 2rem;
+        width: fit-content;
+        flex-direction: column;
+        position: relative;
+    }
+
+    #share-button {
+        margin: 2rem;
+        display: flex;
+        align-items: center;
+        font-size: 2rem;
+        width: fit-content;
+        flex-direction: column;
+        position: relative;
+    }
+
+    span {
+        color: white;
+    }
+}
+
+@media only screen and (min-width: 930px) and (max-width: 1149px) {
+    /* stijlregels voor browserschermen > 930px en < 1149px */
+
+    .vervoerders {
+        width: 100%;
+        height: auto;
+    }
 
 
-
-
-
-
+    main {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: "nav tekst";
+    }
 
 }
 
-@media only screen and (min-width: 720px) and (max-width: 1023px) {
-    /* stijlregels voor browserschermen > 720px en < 1024px */
-
-}
-
-@media only screen and (min-width:1024px) {
+@media only screen and (min-width:1150px) {
     /* stijlregels voor browserschermen ≥ 1024px */
+
+
+    .vervoerders {
+        width: 100%;
+        height: auto;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: "nav tekst";
+        margin-left: 5rem;
+        margin-right: 72rem;
+        gap: 15rem;
+    }
+
+    #share-button {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        font-size: 2rem;
+        width: fit-content;
+        position: fixed;
+        right: 10%;
+        bottom: 10%;
+    }
+
 }
