--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,6 @@
 body {
     font-family: 'Fira sans', Calibri, sans-serif;
     margin: 0;
-    margin-bottom: 1rem;
 }
 
 @font-face {
@@ -26,7 +25,7 @@ h1 {
 .vervoerders {
     width: 100%;
     overflow: hidden;
-    height: 30rem;
+    height: 35rem;
     object-fit: cover;
 }
 
@@ -181,6 +180,10 @@ details[open] summary {
         margin: 1rem;
     }
 
+    .terug-naar-boven {
+        display: none;
+    }
+
     main {
         width: 100%;
         display: flex;
@@ -221,7 +224,6 @@ details[open] summary {
         height: 3rem;
         padding: 1rem;
         border-radius: 50%;
-        cursor: pointer;
     }
 
     .footer-tel {
@@ -232,23 +234,25 @@ details[open] summary {
     }
 
     #back-to-top {
-        margin: 2rem;
+        margin: 1rem;
         display: flex;
         align-items: center;
         font-size: 2rem;
         width: fit-content;
         flex-direction: column;
         position: relative;
+        cursor: pointer;
     }
 
     #share-button {
-        margin: 2rem;
+        margin: 1rem;
         display: flex;
         align-items: center;
         font-size: 2rem;
         width: fit-content;
         flex-direction: column;
         position: relative;
+        cursor: pointer;
     }
 
     span {
@@ -276,11 +280,6 @@ details[open] summary {
 @media only screen and (min-width:1150px) {
     /* stijlregels voor browserschermen ≥ 1024px */
 
-
-    .vervoerders {
-        width: 100%;
-        height: auto;
-    }
 
     main {
         display: grid;
