--- a/style/style.css
+++ b/style/style.css
@@ -337,4 +337,14 @@ details[open] summary {
         border-radius: 0px 0px 5rem 0px;
     }
 
+    .searchbar {
+        border: 3px solid #b9005f;
+        border-radius: 5%;
+        width: 10rem;
+        float: right;
+        padding: 6px;
+        margin-top: 8px;
+        margin-right: 16px;
+        font-size: 17px;
+    }
 }
