--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,7 @@ details[open] summary {
 }
 
 
-.inhoud-tekst {
+#inside {
     background-color: white;
     color: black;
     margin: 1rem 1rem 1rem 1rem;
