--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ h1 {
 .vervoerders {
     width: 100%;
     overflow: hidden;
-    height: 30rem;
+    height: 28rem;
     object-fit: cover;
 }
 
@@ -53,6 +53,7 @@ h1 {
 
 .header_title {
     font-size: 50px;
+    margin-top: 1rem;
 }
 
 .header_subtitle {
@@ -327,6 +328,22 @@ code {
 @media only screen and (min-width:1315px) {
     /* stijlregels voor browserschermen ≥ 1315px */
 
+
+    .intro {
+        display: flex;
+        flex-direction: row;
+        column-gap: 8%;
+        margin: 0rem 5rem 3rem 5rem;
+    }
+
+    .intro-sect {
+        width: 33%;
+        border: 4px solid #b9005f;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     main {
         display: grid;
