--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ h1 {
 .header_title {
     font-size: 50px;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .header_subtitle {
@@ -332,17 +333,22 @@ code {
     .intro {
         display: flex;
         flex-direction: row;
-        column-gap: 8%;
+        column-gap: 5%;
         margin: 0rem 5rem 3rem 5rem;
     }
 
     .intro-sect {
         width: 33%;
-        border: 4px solid #b9005f;
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        border: 3px solid #b9005f;
+        padding: 0rem 1rem 0rem 1rem;
+    }
+
+    .intro-vraag {
+        font-size: 28px;
+    }
+
+    .introductie-tekst {
+        font-size: 15px;
     }
 
     main {
