--- a/style/style.css
+++ b/style/style.css
@@ -214,6 +214,19 @@ code {
     font-size: 17px;
 }
 
+.callout__description {
+    color: #b9005f;
+}
+
+pre code {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 10px;
+    width: 30rem;
+    font-size: 14px;
+}
+
 
 
 @media only screen and (min-width: 320px) and (max-width: 929px) {
@@ -307,6 +320,16 @@ code {
     span {
         color: white;
     }
+
+    pre code {
+        background-color: #eee;
+        border: 1px solid #999;
+        display: block;
+        padding: 10px;
+        width: 95%;
+        font-size: 10px;
+    }
+
 }
 
 @media only screen and (min-width: 930px) and (max-width: 1314px) {
@@ -396,4 +419,11 @@ code {
         margin-right: 16px;
         font-size: 17px;
     }
+
+    pre code {
+        padding: 10px;
+        width: 31rem;
+        font-size: 14px;
+    }
+
 }
