--- a/style/style.css
+++ b/style/style.css
@@ -135,6 +135,16 @@ summary {
     padding: 1rem 1rem 1rem 1rem;
 }
 
+.intro-tekst {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.intro-inhoud {
+    margin: 0;
+}
 
 
 summary:hover,
@@ -328,6 +338,7 @@ pre code {
     span {
         color: white;
     }
+
 
     pre code {
         background-color: #eee;
