--- a/style/style.css
+++ b/style/style.css
@@ -422,7 +422,7 @@ pre code {
         position: absolute;
         display: block;
         left: 0;
-        padding: 0.8rem 2rem 1rem 1.2rem;
+        padding: .5rem 2rem .5rem 1rem;
         width: 20rem;
         background-color: white;
         border-radius: 0px 0px 5rem 0px;
